Fixing spacing in nav and adding border in header

--- a/css/main.css
+++ b/css/main.css
@@ -59,14 +59,15 @@ header {
 
 header h1 {
 	margin: 0;
-	padding: 38px 0;
+	padding: 30px 0;
+	border-bottom: 3px solid #77a466;
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
+	padding: 20px 0;
 }
 header nav ul {
 	margin: 0;
@@ -76,6 +77,7 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: .875em;
+	line-height: 2em;
 	padding: 0 10px;
 	display: flex;
 }
